# puyoquest

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  codegen.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  dump-db.sh  package.json  pnpm-lock.yaml
api/: Cargo.toml  README.md
api/migrations/: 20240602180223_init-triggers-timezone.sql  20240602180820_characters.sql  20240604020008_cards.sql  20240618173909_aliases.sql
api/scripts/: int_test.sh
api/src/: aliases.rs  api_tag.rs  characters.rs  db.rs  healthcheck.rs  lib.rs  main.rs  util.rs
api/src/aliases/: find_by_alias.rs  list_by_char_id.rs  types.rs  upsert.rs
api/src/cards/: get_by_id.rs  types.rs  upsert.rs
api/src/characters/: find.rs  get_by_id.rs  upsert.rs
api/src/util/: normalize_name.rs  url_encode_nfc.rs
api/tests/: aliases.rs  cards.rs  characters.rs  healthcheck.rs
api/tests/aliases/: find_by_alias.rs  upsert.rs
api/tests/cards/: get_by_id.rs
api/tests/characters/: get_by_id.rs  upsert.rs
api/tests/common/: mod.rs  seed.rs
api/tests/common/seed/: aliases.rs  characters.rs
bot/: Cargo.toml
bot/src/commands/: char_by_id.rs
infra/: Pulumi.yaml  README.md  package.json  tsconfig.json
infra/src/: constants.ts  index.ts  vpc.ts
infra/src/ec2/: index.ts  instance-connect.ts  key-pairs.ts  ssh-instance.ts
infra/src/iam/: github.ts  index.ts  pulumi.ts
infra/src/iam/groups/: admin.ts
infra/src/iam/roles/: admin.ts  index.ts  pulumi-local.ts
infra/src/iam/users/: index.ts  s2.ts
infra/src/services/: api.ts
sdk/docs/: CardType.md  HealthcheckApi.md
sdk/src/apis/: cards_api.rs  mod.rs
sdk/src/models/: character_create.rs  mod.rs
services/api/: .gitignore  Cargo.toml  README.md  package.json
services/api/legacy-migration/: legacy-db-migration.sql
services/api/migrations/: 20240602180820_characters.sql  20240604020008_cards.sql
services/api/src/: aliases.rs  cache.rs  cards.rs  characters.rs  healthcheck.rs  lib.rs  main.rs  util.rs
services/api/src/aliases/: find_by_alias.rs  types.rs  upsert.rs
services/api/src/cards/: find_by_name_rarity.rs  get_by_id.rs  template_data.rs  types.rs  upsert.rs
services/api/src/characters/: types.rs
services/api/src/util/: parse_rarity.rs  resolve_card_template.rs
services/api/tests/: aliases.rs  cards.rs  healthcheck.rs
services/api/tests/aliases/: find_by_alias.rs  list_by_char_id.rs  upsert.rs
services/api/tests/cards/: find_by_name_rarity.rs  get_by_id.rs
services/api/tests/characters/: find.rs  get_by_id.rs  list_aliases.rs  upsert.rs
services/api/tests/common/: mod.rs
services/api/tests/common/seed/: aliases.rs  cards.rs  characters.rs
services/bot/: .env.example  Cargo.toml  README.md
services/bot/src/: commands.rs  embeds.rs  env_config.rs  main.rs  util.rs
services/bot/src/commands/: card.rs  char_by_id.rs
services/bot/src/embeds/: card_embed.rs
services/bot/src/util/: card_embed.rs  parse_card_query.rs  ppq_client.rs
wiki/: Cargo.toml  README.md
wiki/src/: util.rs  wiki_client.rs
wiki/src/util/: parse_template.rs
wiki/src/wiki_client/: card_categories.rs  fetch_raw_template.rs  fetch_template.rs  image_url.rs  recent_char_changes.rs
wiki/tests/: wiki_client.rs
wiki/tests/wiki_client/: fetch_raw_template.rs  fetch_template.rs  image_url.rs  page_image_filenames.rs  recent_char_changes.rs
