[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = { version = "3.0.0", features = ["server", "test"] }
poem-openapi = { version = "5.0.0", features = ["swagger-ui"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.15"
