[package]
name = "wiki"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.203"
serde_json = { version = "1.0.117", features = ["raw_value"] }
html2text = "0.12.5"
fancy-regex = "0.13.0"
lazy_static = "1.4.0"
unicode-normalization = "0.1.22"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.0"
