[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
fancy-regex = "0.13.0"
lazy_static = "1.4.0"
poise = "0.6.1"
poise_macros = "0.6.1"
reqwest = { version = "0.12.4", features = ["json"] }
sdk = { path = "../../packages/sdk" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["raw_value"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

# [dependencies.serenity]
# default-features = false
# features = [
#   "builder",
#   "client",
#   "gateway",
#   "model",
#   "utils",
#   "collector",
#   "framework",
# ]
# version = "0.12.2"
